@@ -1,3 +1,15 @@
+2004-09-26  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/javalib/java/util/Collections.java:
+	Resynced with GNU Classpath.
+
+	2004-09-21  Mark Wielaard  <mark@klomp.org>
+
+        Fixes bug #10447
+        * java/util/Collections.java
+        (binarySearch(List, Object, Comparator): Explicitly reverse direction
+        in list iterator.
+
 2004-09-25  Dalibor Topic  <robilad@kaffe.org>
 
 	Fix to make mauve JDK 1.4 tests run.
